# rust_analyzer_duplicate_symbol

./: Cargo.toml
src/: binary_a.rs  binary_b.rs  common.rs
