[package]
name = "rust_analyzer_duplicate_symbol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "binary_a"
path = "src/binary_a.rs"

[[bin]]
name = "binary_b"
path = "src/binary_b.rs"